tests/baselines/reference/classAbstractCrashedOnce(strict=true).errors.txt
classAbstractCrashedOnce.ts(2,24): error TS7010: 'test', which lacks return-type annotation, implicitly has an 'any' return type.
classAbstractCrashedOnce.ts(8,5): error TS1003: Identifier expected.


==== classAbstractCrashedOnce.ts (2 errors) ====
    abstract class foo {
        protected abstract test();
                           ~~~~
!!! error TS7010: 'test', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class bar extends foo {
        test() {
            this.
        }
        ~
!!! error TS1003: Identifier expected.
    }
    var x = new bar();